# dotfiles

./: .gitignore  .luarc.json  .nixd.json  .nvim.lua  README.md  README.norg  README.org  flake.nix
home/: README.org  default.nix  neovim.nix  shell.nix  tools.nix  ui.nix  zathura.nix
home/editor/: README.org  default.nix
home/editor/helix/: README.org  config.toml  default.nix
home/editor/helix/languages/: latex.toml
home/editor/nvim/: default.nix
home/emacs/: README.org  default.nix  early-init.el  init.el
home/nvim/: README.org  catppuccin.lua  default.nix  init.lua  lspconfig.lua  lualine.lua  molten.lua  neorg.lua  options.lua  telescope.lua  term.lua  treesitter.lua  vimtex.lua
home/nvim/snippets/: tex.lua
home/security/: README.org  default.nix
home/shell/: README.org  default.nix
home/tools/: README.org  default.nix
home/ui/: README.org  default.nix
home/wezterm/: wezterm.lua
home/zathura/: README.org  default.nix
home/zsh/: p10k.zsh
overlays/: neovim.nix
scripts/: nixos.sh  ssh_askpass.sh  wsl.sh
secrets/: gpg_keys  ssh_config
system/: README.org  default.nix  dev.nix  docker.nix  shell.nix  ui.nix  wsl.nix
system/dev/: README.org  default.nix
system/docker/: README.org  default.nix
system/shell/: README.org  default.nix
system/ui/: README.org  default.nix
system/wsl/: README.org  default.nix
templates/latex/: .latexmkrc  flake.nix  main.tex
templates/python/: flake.nix  pyproject.toml
templates/python/jupyterlab/: flake.nix  pyproject.toml
templates/python/molten/: flake.nix  pyproject.toml
(+2 files in other folders)
