[tool.poetry]
name = "project"
version = "0.1.0"
description = "project description"
authors = ["Name <email>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

